--- a/avito_management/templates/records/index.html
+++ b/avito_management/templates/records/index.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <title>Договора</title>
-</head>
-<div class="container py-5">
-  <h1>Главная страница</h1>
-    {{ records.pvz }}
+{% extends 'base.html' %}
+{% block content %}
 
-    {{ records.service }}
-
-
-
-
-</html>
+{% for record in records %}
+{% if forloop.first %}
+<h3>{{ record.partner }}</h3>
+<li>{{ record.pvz }}
+<li>{{ record.service }}
+<p>
+{% endif %}
+{% endfor %}
+{% endblock %}
