--- a/avito_management/templates/base.html
+++ b/avito_management/templates/base.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
 {% load static %}
-<html lang="ru">
 <head>
+  {% include 'includes/datepicker.html' %}
   <meta charset="UTF-8">
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+  <title>
+    {% block title %}Title{% endblock title %}
+  </title>
+  <style>
+      table {
+          font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+          font-size: 14px;
+          border-radius: 10px;
+          border-spacing: 0;
+          text-align: center;
+          border: 2px solid grey;
+      }
+
+      /* границы ячеек первого ряда таблицы */
+      th {
+          border: 1px solid grey;
+          background: #BCEBDD;
+          color: black;
+          padding: 10px 20px;
+      }
+
+      /* границы ячеек тела таблицы */
+      td {
+          width: 600px;
+          border: 1px solid grey;
+          border-style: solid;
+          border-width: 0 1px 1px 0;
+      }
+  </style>
 </head>
 <body>
 <header>
@@ -18,4 +47,3 @@
   {% include 'includes/footer.html' %}
 </footer>
 </body>
-</html>
