--- a/avito_management/templates/records/contract_add.html
+++ b/avito_management/templates/records/contract_add.html
@@ -1,16 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Добавить договор</title>
-</head>
-<body>
-{% csrf_token %}
-<form method="post" action="{% url 'records:contract_add' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" value="Отправить">
-</form>
+{% extends 'base.html' %}
+{% block title %}
+{% if is_edit %}
+Редактировать запись
+{% else %}
+Добавить договор
+{% endif %}
+{% endblock title %}
+{% block content %}
+<div class="container py-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8 p-5">
+      <div class="card">
+        <div class="card-header">
+          <!-- Заглушка для вариации выбора добавить или изменить -->
+          {% if is_edit %}
+          Редактировать
+          {% else %}
+          Новая запись
+          {% endif %}
+        </div>
+        <div class="card-body">
+          {% if form.errors %}
+          {% for field in form %}
+          {% for error in field.errors %}
+          <div class="alert alert-danger">
+            {{ error|escape }}
+          </div>
+          {% endfor %}
+          {% endfor %}
+          {% for error in form.non_field_errors %}
+          <div class="alert alert-danger">
+            {{ error|escape }}
+          </div>
+          {% endfor %}
+          {% endif %}
 
-</body>
-</html>
+          <form method="post" action="{% url 'records:contract_add' %}">
+            {% csrf_token %}
+            {% for field in form %}
+            <div class="form-group row my-3 p-3">
+              <label for="{{ field.id_for_label }}">
+                {{ field.label }}
+                {% if field.field.required %}
+                <span class="required text-danger">*</span>
+                {% endif %}
+              </label>
+              {{ field }}
+              {% if field.help_text %}
+              <small id='{{ field.id_for_label }}-help' class="form-text text-muted">
+                {{ field.help_text|safe }}
+              </small>
+              {% endif %}
+            </div>
+            {% endfor %}
+            <div class="d-flex justify-content-end">
+              <button type="submit" class="btn btn-primary">
+                {% if is_edit %}
+                Сохранить
+                {% else %}
+                Добавить
+                {% endif %}
+              </button>
+            </div>
+          </form>
+          {% endblock %}
